--- a/resource/oes/playbook/common/load_automatic.yml
+++ b/resource/oes/playbook/common/load_automatic.yml
@@ -1,6 +1,6 @@
 ---
 
 - name: load automatic variables
-  include_vars: "{{ local_path_oes_home_config_all }}/automatic.yml"
+  include_vars: "{{ local_path_oes_home_config_all }}/automatic.yaml"
   delegate_to: 127.0.0.1
   run_once: true
