新增对北交所的支持

--- a/resource/mds/playbook/common/base_vars.yml
+++ b/resource/mds/playbook/common/base_vars.yml
@@ -12,6 +12,8 @@ local_path_mds_home_tmp: "{{ local_path_mds_home }}/.tmp"
 local_path_mds_home_tmp_colodir: "{{ local_path_mds_home_tmp }}/{{ colony_num }}"
 local_path_mds_home_mon: "{{ local_path_mds_home }}/mon"
 local_path_mds_home_mon_colodir: "{{ local_path_mds_home_mon }}/{{ colony_num }}"
+local_path_mds_home_bse: "{{ local_path_mds_home }}/bse"
+local_path_mds_home_bse_colodir: "{{ local_path_mds_home_bse }}/{{ colony_num }}"
 local_path_mds_home_sse: "{{ local_path_mds_home }}/sse"
 local_path_mds_home_sse_colodir: "{{ local_path_mds_home_sse }}/{{ colony_num }}"
 local_path_mds_home_sse_etf: "{{ local_path_mds_home }}/sse_etf"
