修复了oes的主柜任务标识错误问题，新增了两融将数据同步到mon的功能

--- a/resource/oes/playbook/collector/counter_distribute/distribute_main.yaml
+++ b/resource/oes/playbook/collector/counter_distribute/distribute_main.yaml
@@ -18,6 +18,9 @@
     - include_tasks: ./local_to_othrt_art.yaml
       when: xcounter_freezed_ok.stat.exists and is_enable_counter_unilateral_freeze == "yes"
 
+    - include_tasks: ./local_to_mon.yaml
+      when: system_type == "crd"
+
     - include_tasks: ./counter_checker.yaml
 
     - include_tasks: ../after_playbook.yaml
