修复了oes的url错误导致的404报错。修复了查询类型错误导致获取oes状态失败。修复了playbook.py的相关错误,。修复了北交所网关路径变量名和flag标识错误的问题。

--- a/config/automatic_mds.yaml
+++ b/config/automatic_mds.yaml
@@ -21,7 +21,7 @@ mon_check_files_list:
 bse_host: "192.168.11.189"
 bse_port: 22
 bse_user: "monuser"
-gateway_path_root_bse: /mnt/quant360/import/bse
+gateway_path_root_exchange_bse: /mnt/quant360/import/bse
 
 bse_cp_files_list:
   - "NQXX.DBF"
