--- a/resource/mds/playbook/common/base_vars.yaml
+++ b/resource/mds/playbook/common/base_vars.yaml
@@ -52,6 +52,7 @@ slave_backup_path_mds_curr_date: "{{ slave_backup_path_mds }}/{{ curr_date }}"
 
 ############################## flag 文件名 ##########################
 fetch_mon_ok: "DATA_FETCH_MON.{{ curr_date }}.OK"
+fetch_bse_ok: "DATA_FETCH_BSE.{{ curr_date }}.OK"
 fetch_sse_ok: "DATA_FETCH_SSE.{{ curr_date }}.OK"
 fetch_szse_ok: "DATA_FETCH_SZSE.{{ curr_date }}.OK"
 
