修复了oes上海和深圳yaml文件名结尾错误的问题

--- a/resource/oes/playbook/collector/szse_gateway/gateway_to_local.yaml
+++ b/resource/oes/playbook/collector/szse_gateway/gateway_to_local.yaml
@@ -43,7 +43,7 @@
   run_once: true
 
 - name: load sse etf variables
-  include_vars: "{{ local_path_oes_home_tmp_colodir }}/szse_etf.yml"
+  include_vars: "{{ local_path_oes_home_tmp_colodir }}/szse_etf.yaml"
   delegate_to: 127.0.0.1
   run_once: true
 
