--- a/resource/oes/playbook/collector/sse_gateway/sse_main.yaml
+++ b/resource/oes/playbook/collector/sse_gateway/sse_main.yaml
@@ -2,18 +2,18 @@
 
 - hosts: all
   vars_files:
-    - ../../common/base_vars.yml
-    - ./sse_vars.yml
+    - ../../common/base_vars.yaml
+    - ./sse_vars.yaml
     
   tasks:
-    - include_tasks: ../../common/load_automatic.yml
+    - include_tasks: ../../common/load_automatic.yaml
 
-    - include_tasks: ../before_playbook.yml
+    - include_tasks: ../before_playbook.yaml
     
-    - include_tasks: ./gateway_to_local.yml
+    - include_tasks: ./gateway_to_local.yaml
 
-    - include_tasks: ./local_to_oes.yml
+    - include_tasks: ./local_to_oes.yaml
 
-    - include_tasks: ./sse_checker.yml
+    - include_tasks: ./sse_checker.yaml
 
-    - include_tasks: ../after_playbook.yml
+    - include_tasks: ../after_playbook.yaml
