--- a/resource/oes/playbook/collector/sse_gateway/gateway_to_local.yaml
+++ b/resource/oes/playbook/collector/sse_gateway/gateway_to_local.yaml
@@ -48,7 +48,7 @@
   run_once: true
 
 - name: export sse etf variables
-  command: "{{ local_python_interpreter }} get_etf_check_files.py --task sse --colony_num {{ colony_num }} --curr_date {{ curr_date }}"
+  command: "{{ local_python_interpreter }} get_etf_check_files.py --task sse --oes_dir {{ local_path_oes_home }} --colony_num {{ colony_num }} --curr_date {{ curr_date }}"
   args:
     chdir: "{{ local_path_script_home_python }}"
   delegate_to: 127.0.0.1
