--- a/resource/oes/playbook/collector/szse_gateway/gateway_to_local.yaml
+++ b/resource/oes/playbook/collector/szse_gateway/gateway_to_local.yaml
@@ -36,7 +36,7 @@
   run_once: true
 
 - name: export sse etf variables
-  command: "{{ local_python_interpreter }} get_etf_check_files.py --task szse --colony_num {{ colony_num }} --curr_date {{ curr_date }}"
+  command: "{{ local_python_interpreter }} get_etf_check_files.py --task szse --oes_dir {{ local_path_oes_home }} --colony_num {{ colony_num }} --curr_date {{ curr_date }}"
   args:
     chdir: "{{ local_path_script_home_python }}"
   delegate_to: 127.0.0.1
