1. 修复了请求id为空的问题， 2. 修复了oes和mds查询系统状态为空的问题， 3. 修复了计划任务新增时任务重试相关的操作不生效的问题， 4. 修复了计划任务修改时报错时无法回滚的问题

--- a/resource/mds/playbook/collector/before_playbook.yaml
+++ b/resource/mds/playbook/collector/before_playbook.yaml
@@ -32,10 +32,12 @@
   delegate_to: 127.0.0.1
   run_once: true
 
-- name: touch local failed flag
-  shell: "echo {{ JOBS_RECORD_ID }} > {{ local_path_mds_home_flag_colodir }}/{{ flag_running }}"
+- name: touch running flag
+  file:
+    path: "{{ local_path_mds_home_flag_colodir }}/{{ flag_running }}"
+    state: touch
   delegate_to: 127.0.0.1
-  run_once: true
+  run_once: yes
 
 - name: print curr_date
   debug:
