--- a/resource/oes/playbook/collector/before_playbook.yaml
+++ b/resource/oes/playbook/collector/before_playbook.yaml
@@ -33,7 +33,12 @@
   run_once: true
 
 - name: touch running flag
-  shell: "echo {{ JOBS_RECORD_ID }} > {{ local_path_oes_home_flag_colodir }}/{{ flag_running }}"
+  file:
+    path: "{{ local_path_oes_home_flag_colodir }}/{{ flag_running }}"
+    state: touch
+  delegate_to: 127.0.0.1
+  run_once: yes
+  
   delegate_to: 127.0.0.1
   run_once: true
 
